--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>sravs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>sravs</name>
-	<description>Project for Spring Boot</description>
+	<description>Project for Movie Result</description>
 
 	<properties>
 		<java.version>8</java.version>
